--- a/arquitectura-css-assets/index.html
+++ b/arquitectura-css-assets/index.html
@@ -18,6 +18,13 @@
         <link href="assets/css/sobre/sobre.css" rel="stylesheet" />
         <link href="assets/css/sobre/sobre-titulo.css" rel="stylesheet" />
         <link href="assets/css/sobre/sobre-descripcion.css" rel="stylesheet" />
+        <link href="assets/css/recetas.css" rel="stylesheet" />
+        <link href="assets/css/recetas/receta.css" rel="stylesheet" />
+        <link href="assets/css/recetas/receta-boton.css" rel="stylesheet" />
+        <link href="assets/css/recetas/receta-contenido.css" rel="stylesheet" />
+        <link href="assets/css/recetas/receta-descripcion.css" rel="stylesheet" />
+        <link href="assets/css/recetas/receta-imagen.css" rel="stylesheet" />
+        <link href="assets/css/recetas/receta-titulo.css" rel="stylesheet" />
     </head>
     <body>
         <header class="cabecera">
@@ -38,6 +45,56 @@
         <section class="sobre">
             <h2 class="sobre__titulo">Recetar para economizar y ganar salud</h2>
             <p class="sobre__descripcion">Nuestra recetas te ayudan a aprovechar mejor los alimentos, economizar ganar tiempo y practicidad</p>
+        </section>
+        <section class="recetas">
+            <div class="receta">
+                <img alt="Tigela de abacate" class="receta__imagem" src="./assets/img/recetas/bowl-de-aguacate.jpg" />
+                <div class="receta__contenido">
+                    <h4 class="receta__titulo">Bowl de aguacate</h4>
+                    <p class="receta__descripcion">Receta refrescante y llena de vitaminas para su desayuno.</p>
+                    <button class="receta__boton">Ver receta</button>
+                </div>
+            </div>
+            <div class="receta">
+                <img alt="Ensalada de kiwi" class="receta__imagem" src="./assets/img/recetas/ensalada-de-kiwi.jpg" />
+                <div class="receta__contenido">
+                    <h4 class="receta__titulo">Ensalada de kiwi</h4>
+                    <p class="receta__descripcion">Receta refrescante y llena de vitaminas para su desayuno.</p>
+                    <button class="receta__boton">Ver receta</button>
+                </div>
+            </div>
+            <div class="receta">
+                <img alt="Mix de vegetales" class="receta__imagem" src="./assets/img/recetas/mix-de-vegetales.jpg" />
+                <div class="receta__contenido">
+                    <h4 class="receta__titulo">Mix de vegetales</h4>
+                    <p class="receta__descripcion">Receta refrescante y llena de vitaminas para su desayuno.</p>
+                    <button class="receta__boton">Ver receta</button>
+                </div>
+            </div>
+            <div class="receta">
+                <img alt="Pimentones a la Juliana" class="receta__imagem" src="./assets/img/recetas/pimentones-a-la-juliana.jpg" />
+                <div class="receta__contenido">
+                    <h4 class="receta__titulo">Pimentones a la Juliana</h4>
+                    <p class="receta__descripcion">Receta refrescante y llena de vitaminas para su desayuno.</p>
+                    <button class="receta__boton">Ver receta</button>
+                </div>
+            </div>
+            <div class="receta">
+                <img alt="Plato oriental" class="receta__imagem" src="./assets/img/recetas/plato-oriental.jpg" />
+                <div class="receta__contenido">
+                    <h4 class="receta__titulo">Plato oriental</h4>
+                    <p class="receta__descripcion">Receta refrescante y llena de vitaminas para su desayuno.</p>
+                    <button class="receta__boton">Ver receta</button>
+                </div>
+            </div>
+            <div class="receta">
+                <img alt="Remolachas horneadas" class="receta__imagem" src="./assets/img/recetas/remolachas-horneadas.jpg" />
+                <div class="receta__contenido">
+                    <h4 class="receta__titulo">Remolachas horneadas</h4>
+                    <p class="receta__descripcion">Receta refrescante y llena de vitaminas para su desayuno.</p>
+                    <button class="receta__boton">Ver receta</button>
+                </div>
+            </div>
         </section>
     </body>
 </html>
