--- a/arquitectura-css-assets/index.html
+++ b/arquitectura-css-assets/index.html
@@ -25,6 +25,13 @@
         <link href="assets/css/recetas/receta-descripcion.css" rel="stylesheet" />
         <link href="assets/css/recetas/receta-imagen.css" rel="stylesheet" />
         <link href="assets/css/recetas/receta-titulo.css" rel="stylesheet" />
+        <link href="assets/css/quienesSomos/quienesSomos.css" rel="stylesheet" />
+        <link href="assets/css/quienesSomos/quienesSomos-titulo.css" rel="stylesheet" />
+        <link href="assets/css/quienesSomos/quienesSomos-descripcion.css" rel="stylesheet" />
+        <link href="assets/css/personas.css" rel="stylesheet" />
+        <link href="assets/css/personas/persona-nombre.css" rel="stylesheet" />
+        <link href="assets/css/personas/persona-imagen.css" rel="stylesheet" />
+        <link href="assets/css/personas/persona-funcion.css" rel="stylesheet" />
     </head>
     <body>
         <header class="cabecera">
@@ -39,7 +46,7 @@
             </nav>
         </header>
         <section class="banner">
-            <img class="banner__imagen" src="./assets/img/banner.jpg" alt="banner">
+            <div class="banner__imagen"></div>
             <h2 class="banner__titulo">Reaprovecheve mejor los alimentos</h2>
         </section>
         <section class="sobre">
@@ -48,7 +55,7 @@
         </section>
         <section class="recetas">
             <div class="receta">
-                <img alt="Tigela de abacate" class="receta__imagem" src="./assets/img/recetas/bowl-de-aguacate.jpg" />
+                <img alt="Tigela de abacate" class="receta__imagen" src="./assets/img/recetas/bowl-de-aguacate.jpg" />
                 <div class="receta__contenido">
                     <h4 class="receta__titulo">Bowl de aguacate</h4>
                     <p class="receta__descripcion">Receta refrescante y llena de vitaminas para su desayuno.</p>
@@ -56,7 +63,7 @@
                 </div>
             </div>
             <div class="receta">
-                <img alt="Ensalada de kiwi" class="receta__imagem" src="./assets/img/recetas/ensalada-de-kiwi.jpg" />
+                <img alt="Ensalada de kiwi" class="receta__imagen" src="./assets/img/recetas/ensalada-de-kiwi.jpg" />
                 <div class="receta__contenido">
                     <h4 class="receta__titulo">Ensalada de kiwi</h4>
                     <p class="receta__descripcion">Receta refrescante y llena de vitaminas para su desayuno.</p>
@@ -64,7 +71,7 @@
                 </div>
             </div>
             <div class="receta">
-                <img alt="Mix de vegetales" class="receta__imagem" src="./assets/img/recetas/mix-de-vegetales.jpg" />
+                <img alt="Mix de vegetales" class="receta__imagen" src="./assets/img/recetas/mix-de-vegetales.jpg" />
                 <div class="receta__contenido">
                     <h4 class="receta__titulo">Mix de vegetales</h4>
                     <p class="receta__descripcion">Receta refrescante y llena de vitaminas para su desayuno.</p>
@@ -72,7 +79,7 @@
                 </div>
             </div>
             <div class="receta">
-                <img alt="Pimentones a la Juliana" class="receta__imagem" src="./assets/img/recetas/pimentones-a-la-juliana.jpg" />
+                <img alt="Pimentones a la Juliana" class="receta__imagen" src="./assets/img/recetas/pimentones-a-la-juliana.jpg" />
                 <div class="receta__contenido">
                     <h4 class="receta__titulo">Pimentones a la Juliana</h4>
                     <p class="receta__descripcion">Receta refrescante y llena de vitaminas para su desayuno.</p>
@@ -80,7 +87,7 @@
                 </div>
             </div>
             <div class="receta">
-                <img alt="Plato oriental" class="receta__imagem" src="./assets/img/recetas/plato-oriental.jpg" />
+                <img alt="Plato oriental" class="receta__imagen" src="./assets/img/recetas/plato-oriental.jpg" />
                 <div class="receta__contenido">
                     <h4 class="receta__titulo">Plato oriental</h4>
                     <p class="receta__descripcion">Receta refrescante y llena de vitaminas para su desayuno.</p>
@@ -88,11 +95,32 @@
                 </div>
             </div>
             <div class="receta">
-                <img alt="Remolachas horneadas" class="receta__imagem" src="./assets/img/recetas/remolachas-horneadas.jpg" />
+                <img alt="Remolachas horneadas" class="receta__imagen" src="./assets/img/recetas/remolachas-horneadas.jpg" />
                 <div class="receta__contenido">
                     <h4 class="receta__titulo">Remolachas horneadas</h4>
                     <p class="receta__descripcion">Receta refrescante y llena de vitaminas para su desayuno.</p>
                     <button class="receta__boton">Ver receta</button>
+                </div>
+            </div>
+        </section>
+        <section class="quienes-somos">
+            <h3 class="quienes-somos__titulo">Quien somos</h3>
+            <p class="quienes-somos__descripcion">Conozca la comunidad por detrás de la iniciativa</p>
+            <div class="personas">
+                <div class="persona">
+                    <div class="persona__imagen persona__imagen--roberta"></div>
+                    <span class="persona__nombre">Roberta</span>
+                    <span class="persona__funcion">Contenido</span>
+                </div>
+                <div class="persona">
+                    <div class="persona__imagen persona__imagen--marcela"></div>
+                    <span class="persona__nombre">Marcela</span>
+                    <span class="persona__funcion">Chef de cocina</span>
+                </div>
+                <div class="persona">
+                    <div class="persona__imagen persona__imagen--andrea"></div>
+                    <span class="persona__nombre">Andrea</span>
+                    <span class="persona__funcion">Pequeña Productora</span>
                 </div>
             </div>
         </section>
