--- a/arquitectura-css-assets/index.html
+++ b/arquitectura-css-assets/index.html
@@ -32,6 +32,8 @@
         <link href="assets/css/personas/persona-nombre.css" rel="stylesheet" />
         <link href="assets/css/personas/persona-imagen.css" rel="stylesheet" />
         <link href="assets/css/personas/persona-funcion.css" rel="stylesheet" />
+        <link href="assets/css/pie-de-pagina.css" rel="stylesheet" />
+        <link href="assets/css/logo.css" rel="stylesheet" />
     </head>
     <body>
         <header class="cabecera">
@@ -125,4 +127,7 @@
             </div>
         </section>
     </body>
+    <footer class="pie-de-pagina">
+        Contacto: ejemplo@email.com
+    </footer>
 </html>
